--- a/.github/workflows/build&push_squirrel_wpf.yml
+++ b/.github/workflows/build&push_squirrel_wpf.yml
@@ -39,13 +39,13 @@ jobs:
          run: dotnet tool install -g csq --version 3.0.170-unstable-ge14820
       
        - name: Create Install
-         run: csq pack --packId "WPFWithSquirrel" --packVersion ${{ inputs.tag }} --packDirectory=${{env.OUTPUT_PROJECT_PATH}} --csq-sln=./WpfBuildWithSquirrel.sln --packAuthors="Actions with Squirrel"  --icon="./images/install.ico" --splashImage="./images/install.gif"
+         run: csq pack --packId "WPFWithSquirrel" --packVersion ${{ github.ref_name }} --packDirectory=${{env.OUTPUT_PROJECT_PATH}} --csq-sln=./WpfBuildWithSquirrel.sln --packAuthors="Actions with Squirrel"  --icon="./images/install.ico" --splashImage="./images/install.gif"
 
        - name: Create Release
          uses: ncipollo/release-action@v1
          with:
            artifacts: "${{env.WORKING_DIR}}/Releases/*.exe, ${{env.WORKING_DIR}}/Releases/*.nupkg,${{env.WORKING_DIR}}/Releases/RELEASES*"
            allowUpdates: true
-           tag: ${{ inputs.tag }}
+           tag: ${{ github.ref_name }}
            token: ${{ secrets.GITHUB_TOKEN }}
 
